--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>  
-<html lang="en">          
+<html lang="en">           
 <head> 
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <title>Steven's Easy Sudoku</title> 
-
+    <title>Steven's Sudoku</title> 
 
     <!-- favicons --> 
     <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon.png">
@@ -16,13 +14,10 @@
     <link rel="manifest" href="favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
- 
 </head>
 
 <body>
-
     <div id='root-container'></div>
     <script src='dist/bundle.js'></script>
-
 </body>
 </html>
