fixed file-loader problem for winning img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta
         name="description"
-        content="Five sudoku puzzles. They are classified as Easy difficulty. Try to win!">
+        content="Five sudoku puzzles. They are determined to be Easy difficulty. Try to win!">
 </head>
 
 <body>
