adding more types and removing unused imports

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <meta
         name="description"
-        content="Five sudoku puzzles. They are determined to be Easy difficulty. Try to win!">
+        content="Five easy sudoku puzzles.">
 </head>
 
 <body>
-    <div id='root-container'></div>
+    <div id='root'></div>
     <script src='dist/bundle.js'></script>
 </body>
 </html>
