--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>  
-<html lang="en">           
-<head> 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    
-    <title>Steven's Sudoku</title> 
-    <link rel="stylesheet" href="./dist/styles.css"/>
-    <link rel="icon" type="image/png" href="favicons/favicon-32x32.png"> 
-    <meta
-        name="description"
-        content="Five easy sudoku puzzles."> 
-</head>
-<body>
-    <div id='root'></div>
-    <script src='dist/bundle.js'></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Steven's Sudoku</title>
+    <link rel="stylesheet" href="./dist/styles.css" />
+    <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" />
+    <meta name="description" content="Five easy sudoku puzzles." />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script src="dist/bundle.js"></script>
+  </body>
 </html>
